Fix small gradle issues and enable test dynamic agent loading for mockito